selfhost/test/typechecker/binary/eq_error.2.out
Error at %FILE_NAME%:1:14
Type mismatch
  |  123 == Option.None_
                  ^
Expected: Int
but instead found: <unknown>?
