selfhost/test/typechecker/binary/eq_error.2.abra
123 == Option.None_